deploy/app/base/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crew-demo-api
spec:
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: crew-demo-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: crew-demo-api
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: api
          image: ghcr.io/adiom-data/crew-demo-app-api:latest
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            grpc:
              port: 8080
              service: readiness
          livenessProbe:
            grpc:
              port: 8080
              service: liveness
          startupProbe:
            grpc:
              port: 8080
              service: liveness
            failureThreshold: 30
            periodSeconds: 2
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
