deploy/app/base/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crew-demo-gateway
spec:
  selector:
    app.kubernetes.io/name: crew-demo-gateway
  ports:
    - name: http
      port: 80
      targetPort: http
