deploy/app/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: crew-demo
spec:
  parentRefs:
    - name: public
      namespace: platform-ingress
  rules:
    - backendRefs:
        - name: crew-demo-gateway
          port: 80
